[workspace]

members = ["libmbus_macros"]

[package]
name = "libmbus"
license = "EUPL-1.2"
authors = ["Lexi Robinson <lexi@lexi.org.uk>"]
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.23"
encoding_rs = "0.8.32"
winnow = "0.6.26"
libmbus_macros = { path = "./libmbus_macros" }
rstest = "0.25.0"
